Create the navbar
I created a nav inside the header and I added the nav links in an unordered list

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>MyProject</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <nav class="nav-bar">
+                <h1>Header logo</h1>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </main>
 </body>
 </html>
