Finish the header section
I redone the navigation bar I added new texts
I created a header article section where I put a picture  in and I wrote some cheese text

--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
     <main>
         <header>
             <nav class="nav-bar">
-                <h1>Header logo</h1>
+                <h2>Header logo</h1>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="#">header link one</a></li>
-                        <li><a href="#">header link two</a></li>
-                        <li><a href="#">header link three</a></li>
+                        <li><a href="#">Modells</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Contact us</a></li>
                     </ul>
                 </div>
             </nav>
+            <div class="header-article">
+                <div class="header-text">
+                    <h1>The newst sport cars that you can buy!</h1>
+                    <p>Do you like sport cars? If you are this the best place for you. Feel free to search around in our website!</p>
+                    <p>If you like to get notifications about the nweset deals sign up for our daily email service for FREE!</p>
+                    <button type="button" class="suign-up-button">Sign Up!</button>
+                </div>
+                <div class="header-image">
+                    <img class="aston-martin" src="https://cdn.motor1.com/images/mgl/nAAEMy/s1/aston-martin-v12-vantage-roadster.jpg">
+                </div>
+            </div>
         </header>
     </main>
 </body>
