Finish the footer section
I finished the footer section the the same text as on the image

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                 </div>
             </div>
         </article>
+        <footer>
+            <p>NoCpyright &copy; Martin Patrik 2022</p>
+        </footer>
     </main>
 </body>
 </html>
