Make the font size and the image size
I changed the font size of the header text
I changed the image size
I organised the content width flexbox
The header text has a flex direction of collumn
The image has a flex-direction of row
The whole header-article section has a flex-direction of flex-row

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="header-text">
                     <h1>The newst sport cars that you can buy!</h1>
                     <p>Do you like sport cars? If you are this the best place for you. Feel free to search around in our website!</p>
-                    <p>If you like to get notifications about the nweset deals sign up for our daily email service for FREE!</p>
-                    <button type="button" class="suign-up-button">Sign Up!</button>
+                    <p>If you like to get notifications about the newest deals sign up for our daily email service for FREE!</p>
+                    <button type="button" class="sign-up-button">Sign Up!</button>
                 </div>
                 <div class="header-image">
                     <img class="aston-martin" src="https://cdn.motor1.com/images/mgl/nAAEMy/s1/aston-martin-v12-vantage-roadster.jpg">
@@ -61,7 +61,7 @@
                         <p>Sign up for our news letterment for <em>FREE</em>!</p>
                     </div>
                     <div class="other-sing-up-section">
-                        <button type="button" class="suign-up-button">Sign Up!</button>
+                        <button type="button" class="sign-up-button">Sign Up!</button>
                     </div>
                 </div>
             </div>
