Give an alt to the image element

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button type="button" class="sign-up-button">Sign Up!</button>
                 </div>
                 <div class="header-image">
-                    <img class="aston-martin" src="https://cdn.motor1.com/images/mgl/nAAEMy/s1/aston-martin-v12-vantage-roadster.jpg">
+                    <img alt="Aston Martin" class="aston-martin" src="https://cdn.motor1.com/images/mgl/nAAEMy/s1/aston-martin-v12-vantage-roadster.jpg">
                 </div>
             </div>
         </header>
