--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     </div>
                 </div>
             </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wb74FBP9WOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <div class="second-section">
                 <p class="quote">When you have a dream, you've got to grab it and never let it go.</p>
                 <p class="author">--Carol Burnett</p>
